--- a/styles.css
+++ b/styles.css
@@ -1,19 +1,45 @@
 body {
+  font-family: 13px helvetica,arial,freesans,clean,sans-serif;
 }
 img {
   display: inline-block;
   width: 100%;
-  border: 1px lightgray solid;
 }
-.img-footer {
+.image-footer {
+  border-bottom: 1px lightgray solid;
   display: inline-block;
   width; 5%;
+  font-family: 13px helvetica,arial,freesans,clean,sans-serif;
 }
-.octocat {
-  display: inline-block;
-  width: 30%
+.image-footer a {
+  text-decoration: none;
+  color: black;
+  font-family: sans-serif;
 }
-.authors {
+.image-caption {
   display: inline-block;
-  width: 10%;
+}
+.octocat{
+  display: inline-block;
+  width: 30%;
+  padding: 5px;
+}
+.octocat a img {
+  display: inline-block;
+  border: 1px lightgray solid;
+  border-radius: 3px;
+}
+.authors li {
+  display: inline-block;
+  width: 100%;
+  list-style: none;
+}
+.authors a{
+  display: inline-block;
+  width: 5%;
+}
+
+span {
+  color: lightgray;
+  display: inline-block;
 }
